# Fusion

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
sql/: authors.csv  book_readers.csv  books.csv  create.sql  fill_data.py  generate_data.py  readers.csv  sync_sequences.sql
src/: config.py  database.py  exceptions.py  main.py  utils.py
src/controllers/: abc_controller.py  author.py  book.py  reader.py
src/models/: abc_model.py  author.py  book.py  reader.py
src/routes/: depens.py  routes_api.py
src/routes/api/: author.py  book.py  reader.py
src/schemas/: author.py  book.py  reader.py
